--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,12 @@
 .container ul li:nth-child(3) {
   background-color: pink;
 }
-
+.container ul li:nth-child(5) {
+  background-color: white;
+}
+.container ul li:nth-child(4) {
+  background-color: lightgray;
+}
 .container p:last-child {
   color: red;
 }
